--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Baby Monitor</string>
     <string name="enter_gain_factor">Enter Gain Factor</string>
     <string name="start">start</string>
-    <string name="stop">stop</string>
+    <string name="stop">stop and save</string>
     <string name="status">Status</string>
     <string name="speaker">speaker</string>
 </resources>
