--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Baby Monitor</string>
+    <string name="app_name">Signal Collector</string>
     <string name="enter_gain_factor">Enter Gain Factor</string>
     <string name="start">start</string>
     <string name="stop">stop and save</string>
